test/end-to-end/compile-errors/call-flags.crow
main void() bare
	()::string foo
	()::(string array) foo
	()::(string array array) foo

	()::bool foo
	()::(bool array) foo
	()::(bool array array) foo

	()::nat foo
	()::(nat array) foo
	()::(nat array array) foo

	_ nat array = 1,

# testing indirect call flags
foo[t] spec
	foo void(a t)

foo[t] void(a t array) bare, t foo
	if false
		a[0] foo

foo void(_ string) bare, unsafe
	()

foo void(_ bool)
	()

foo void(_ nat) bare, summon
	()
